# projekt-technologie-obiektowe

./: .gitignore  conftest.py  docker-compose.yml  main.py  pyproject.toml  readme.md  stopwatch.py
src/: app.py  settings.py  theme.py  types.py
src/components/: add_connection_modal.py  add_query.py  database_table.py  database_tree.py
src/css/: add_connection_modal.tcss  add_query_option_modal.tcss  app.tcss
src/service/: postgres.py  types.py
src/tests/: test_settings.py
