[project]
name = "db-explorer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg2-binary>=2.9.10",
    "ruff>=0.11.0",
    "textual>=2.1.2",
    "textual-dev>=1.7.0",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C4", # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]

extend-ignore = [
    "B904",  # Within an except clause, raise exceptions with ...
]
